fix: input invisible on iOS safari

--- a/styles/Main.module.css
+++ b/styles/Main.module.css
@@ -62,6 +62,10 @@
     .notice {
         background-color: #191919;
     }
+
+    .input {
+        border: #3498db 5px solid;
+    }
 }
 
 .title {
